--- a/index.html
+++ b/index.html
@@ -49,19 +49,19 @@
 			<li>
 				<a href="gallery.html">
 					<img src="images/the-father.jpg" alt="">
-					<span>the father</span>
+					<span>El padre</span>
 				</a>
 			</li>
 			<li>
 				<a href="gallery.html">
 					<img src="images/the-actor.jpg" alt="">
-					<span>the actor</span>
+					<span>El actor</span>
 				</a>
 			</li>
 			<li>
 				<a href="gallery.html">
 					<img src="images/the-nerd.jpg" alt="">
-					<span>the nerd</span>
+					<span>El friki</span>
 				</a>
 			</li>
 		</ul>
